cherry-pick 0.18: fix UI bugs, missing failed calls in history, and race conditions in CacheAwareOperationInvocationDecorator
 * fix errant scrollbars in schema explorer
 * fix scrollbars in query history
 * UI fixes with scrollbars and layout for large result sets
 * persisted history now includes  failed attempts
 * capture failed attempts in lineage
 * fix race conditions in CacheAwareOperationInvocationDecorator:
     * Mutliple concurrent attempts to load the same data now result in a single operation
     * Errors are correctly propigated back to the caller
     * Race conditions resolved

--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -34,6 +34,15 @@
       required classes elsewhere -->
 
       <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-test</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>io.projectreactor.kotlin</groupId>
+         <artifactId>reactor-kotlin-extensions</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>cask-api</artifactId>
          <version>${project.version}</version>
