--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
       <arrow.version>0.10.4</arrow.version>
       <logstash.logback.version>6.4</logstash.logback.version>
       <swagger.springfox.version>2.9.2</swagger.springfox.version>
+      <http4k.version>4.9.8.0</http4k.version>
    </properties>
 
    <modules>
@@ -189,7 +190,6 @@
 
    <dependencyManagement>
       <dependencies>
-
          <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-bom</artifactId>
@@ -197,6 +197,15 @@
             <type>pom</type>
             <scope>import</scope>
          </dependency>
+         <!-- https://mvnrepository.com/artifact/org.http4k/http4k-bom -->
+         <dependency>
+            <groupId>org.http4k</groupId>
+            <artifactId>http4k-bom</artifactId>
+            <version>${http4k.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+
 
          <dependency>
             <groupId>org.springframework.cloud</groupId>
