Fixed pipelines for reactive eureka

--- a/pipelines/pipeline-runner-app/src/main/resources/application.yml
+++ b/pipelines/pipeline-runner-app/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
    application:
       name: pipeline-runner
+   main:
+      web-application-type: reactive
+   codec:
+      max-in-memory-size: 100MB
 
 server:
    port: 9610
