make patch releases possible on release branches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,6 +97,7 @@ publish-patch:
       - 'mvn $MAVEN_CLI_OPTS -DskipTests clean deploy -P release'
    only:
       - /^patch\/.*$/
+      - /^release\/.*$/
    artifacts:
       paths:
          - "test-cli/target/*.zip"
