--- a/pipelines/pipeline-runner-core/pom.xml
+++ b/pipelines/pipeline-runner-core/pom.xml
@@ -135,6 +135,30 @@
       </dependency>
 
       <dependency>
+         <groupId>org.http4k</groupId>
+         <artifactId>http4k-bom</artifactId>
+         <version>4.9.8.0</version>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.http4k</groupId>
+         <artifactId>http4k-core</artifactId>
+         <version>4.9.8.0</version>
+         <scope>test</scope>
+      </dependency>
+
+
+      <dependency>
+         <groupId>org.http4k</groupId>
+         <artifactId>http4k-client-apache</artifactId>
+         <version>4.9.8.0</version>
+         <scope>test</scope>
+      </dependency>
+
+
+
+      <dependency>
          <groupId>org.skyscreamer</groupId>
          <artifactId>jsonassert</artifactId>
          <version>1.5.0</version>
