Attempting to quieten logs

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -254,6 +254,7 @@
                   This runs only unit/basic integration tests
                   Benchmark tests double the build time and are run only on the build server
                  -->
+                  <trimStackTrace>true</trimStackTrace>
                  <excludes>
                     <exclude>**/**BenchmarkTest.*</exclude>
                  </excludes>
@@ -312,7 +313,8 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
-                  <configuration>
+
+                   <configuration>
                      <includes>
                         <include>**/**Test.*</include>
                      </includes>
