--- a/jwt-auth-server/pom.xml
+++ b/jwt-auth-server/pom.xml
@@ -113,6 +113,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+               <trimStackTrace>true</trimStackTrace>
                <excludes>
                   <exclude>**/*LiveTest.java</exclude>
                </excludes>
