--- a/cask/src/test/resources/application-test.yml
+++ b/cask/src/test/resources/application-test.yml
@@ -1,11 +1,11 @@
 spring:
    datasource:
-      url: "jdbc:postgresql://localhost:6662/postgres"
-      username: "postgres"
-      password: "postgres"
+      url: "jdbc:postgresql://localhost:5432/vynedb"
+      username: "vynedb"
+      password: "vynedb"
 
    flyway:
-      url: "jdbc:postgresql://localhost:6662/postgres"
-      user: postgres
-      password: postgres
+      url: "jdbc:postgresql://localhost:5432/vynedb"
+      username: "vynedb"
+      password: "vynedb"
       validate-on-migrate: false
