--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -124,6 +124,17 @@
          <artifactId>kotlinx-coroutines-test</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>com.squareup.okhttp3</groupId>
+         <artifactId>okhttp</artifactId>
+         <scope>test</scope>
+         <version>${okhttp3.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.squareup.okhttp3</groupId>
+         <artifactId>mockwebserver</artifactId>
+         <scope>test</scope>
+      </dependency>
 
 
    </dependencies>
