--- a/schema-store-client/pom.xml
+++ b/schema-store-client/pom.xml
@@ -63,5 +63,11 @@
          <version>1</version>
       </dependency>
 
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-core</artifactId>
+      </dependency>
+
+
    </dependencies>
 </project>
