--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -31,6 +31,8 @@ vyne:
    schema:
       publicationMethod: LOCAL # this exposes in memory schema store via http API, use only in Vyne settings
       pollInterval: 5s
+#      Setting the vyne.schema.localStore enables editing
+#      localStore: path/to/taxi/project
    mvc:
       executor:
          corePoolSize: 5
