Cypress tests for UI

--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -10,6 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "automation": "cypress run --spec 'cypress/integration/ui-tests/**/*'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json"
@@ -41,6 +42,7 @@
     "ag-grid-community": "^23.2.1",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-split": "^4.0.0",
+    "b64-to-blob": "^1.2.19",
     "class-transformer": "^0.2.0",
     "core-js": "^3.1.3",
     "file-saver": "^2.0.2",
@@ -78,20 +80,23 @@
     "@angular/compiler-cli": "^8.2.9",
     "@angular/language-service": "^8.0.0",
     "@babel/core": "^7.7.7",
+    "@codingame/monaco-jsonrpc": "^0.3.1",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
     "@storybook/addon-notes": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/angular": "^5.3.14",
+    "@testing-library/cypress": "^7.0.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.10",
-    "@codingame/monaco-jsonrpc": "^0.3.1",
     "babel-loader": "^8.0.6",
     "codelyzer": "~4.2.1",
+    "cypress": "^8.2.0",
+    "cypress-file-upload": "^5.0.8",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
