--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -99,10 +99,10 @@
          <groupId>net.logstash.logback</groupId>
          <artifactId>logstash-logback-encoder</artifactId>
       </dependency>
-      <!--      <dependency>-->
-      <!--         <groupId>org.springframework.boot</groupId>-->
-      <!--         <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-      <!--      </dependency>-->
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -124,14 +124,13 @@
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-websocket</artifactId>
-      	 <exclusions>
+         <exclusions>
             <!-- Exclude the Tomcat dependency -->
             <exclusion>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-tomcat</artifactId>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-tomcat</artifactId>
             </exclusion>
-        </exclusions>
-
+         </exclusions>
       </dependency>
 
       <dependency>
@@ -181,12 +180,12 @@
          <artifactId>turbine-jvm</artifactId>
          <scope>test</scope>
       </dependency>
-       <dependency>
-           <groupId>com.jayway.awaitility</groupId>
-           <artifactId>awaitility</artifactId>
-           <version>1.7.0</version>
-           <scope>test</scope>
-       </dependency>
+      <dependency>
+         <groupId>com.jayway.awaitility</groupId>
+         <artifactId>awaitility</artifactId>
+         <version>1.7.0</version>
+         <scope>test</scope>
+      </dependency>
       <dependency>
          <groupId>org.http4k</groupId>
          <artifactId>http4k-core</artifactId>
@@ -244,8 +243,27 @@
          <artifactId>chronicle-flux</artifactId>
          <version>1.0.1</version>
       </dependency>
-
-
+      <dependency>
+         <groupId>com.squareup.okhttp3</groupId>
+         <artifactId>mockwebserver</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-test</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>io.projectreactor.kotlin</groupId>
+         <artifactId>reactor-kotlin-extensions</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-spring</artifactId>
+         <version>${project.version}</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
 
    </dependencies>
 
