--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
       <kotlin.version>1.4.32</kotlin.version>
       <kotlin.coroutines.version>1.4.3</kotlin.coroutines.version>
+      <kotlin.serialization.version>1.2.2</kotlin.serialization.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
       <spring.cloud.version>Hoxton.SR10</spring.cloud.version>
