--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
       <kotlin.version>1.4.32</kotlin.version>
       <kotlin.coroutines.version>1.4.3</kotlin.coroutines.version>
-      <kotlin.serialization.version>1.2.2</kotlin.serialization.version>
+      <!-- Kotlin Serialization 1.2 requires Kotlin 1.5 -->
+      <kotlin.serialization.version>1.1.0</kotlin.serialization.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
       <spring.cloud.version>Hoxton.SR10</spring.cloud.version>
@@ -309,7 +310,16 @@
             <artifactId>kotlinx-coroutines-test</artifactId>
             <version>${kotlin.coroutines.version}</version>
          </dependency>
-
+         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+            <version>${kotlin.serialization.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-cbor</artifactId>
+            <version>${kotlin.serialization.version}</version>
+         </dependency>
          <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-reactive</artifactId>
@@ -384,6 +394,7 @@
                   <plugin>spring</plugin>
                   <plugin>jpa</plugin>
                   <plugin>no-arg</plugin>
+                  <plugin>kotlinx-serialization</plugin>
                </compilerPlugins>
 
             </configuration>
@@ -397,6 +408,11 @@
                <dependency>
                   <groupId>org.jetbrains.kotlin</groupId>
                   <artifactId>kotlin-maven-noarg</artifactId>
+                  <version>${kotlin.version}</version>
+               </dependency>
+               <dependency>
+                  <groupId>org.jetbrains.kotlin</groupId>
+                  <artifactId>kotlin-maven-serialization</artifactId>
                   <version>${kotlin.version}</version>
                </dependency>
             </dependencies>
