--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -264,6 +264,10 @@
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-serialization-cbor</artifactId>
+      </dependency>
 
    </dependencies>
 
