--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -25,6 +25,10 @@
          <artifactId>jackson-datatype-jsr310</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-serialization-json</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
