Removed Global scope from monitored function, revered default to false for persisting remote calls

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -56,7 +56,7 @@ vyne:
          schemaGraphCacheSize: 5
          searchPathExclusionsCacheSize: 200000
    history:
-      persistRemoteCallResponses: true
+      persistRemoteCallResponses: false
 
 feign:
    client:
