--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -20,7 +20,9 @@ spring:
       max-in-memory-size: 100MB
 
    jpa:
-#      show-sql: true
+      hibernate:
+         use-new-id-generator-mappings: false
+      #      show-sql: true
       hibernate.ddl-auto: none
 #      properties:
 #         hibernate:
