--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -24,9 +24,12 @@ spring:
          use-new-id-generator-mappings: false
       #      show-sql: true
       hibernate.ddl-auto: none
-#      properties:
-#         hibernate:
-#            format_sql: true
+
+      properties:
+         hibernate:
+            jdbc:
+               batch_size: 50
+               order_inserts: true
 
    datasource:
       url: jdbc:h2:file:./vyne-query-history;COMPRESS=TRUE;MV_STORE=false;CACHE_SIZE=1;CASE_INSENSITIVE_IDENTIFIERS=TRUE
