Avoid QueryContext sharing during property discovery

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -144,7 +144,7 @@ management:
    endpoints:
       web:
          exposure:
-            include: prometheus,metrics,info,health,logfile
+            include: prometheus,metrics,info,health,logfile,loggers
 
    endpoint:
       metrics:
