Placed streaming behind a feature flag

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -82,6 +82,8 @@ cask:
                   rightField: tradeCreationTime
    service:
       annotations: Datasource
+   streamQueries:
+      enabled: false
 
 # Actuators + prometheus metrics configuration
 
