--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -326,6 +326,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+               <executions>
+                  <execution>
+                     <goals>
+                        <goal>build-info</goal>
+                     </goals>
+                  </execution>
+               </executions>
             </plugin>
 
             <plugin>
