Capturing Graph metrics from object builder

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -140,9 +140,11 @@ management:
             loggers:
                enabled: true
 
-
    endpoints:
       web:
+         discovery:
+            enabled: true
+
          exposure:
             include: prometheus,metrics,info,health,logfile,loggers
 
@@ -151,3 +153,4 @@ management:
          enabled: true
       prometheus:
          enabled: false
+
