actuator end point & cask web socket handler updates

--- a/file-schema-server/src/main/resources/application.yml
+++ b/file-schema-server/src/main/resources/application.yml
@@ -33,3 +33,35 @@ feign:
 server:
    port: 9305
 
+# Actuators + prometheus metrics configuration
+
+management.endpoints.web.base-path: /api/actuator
+management:
+   metrics:
+      export:
+         prometheus:
+            enabled: false
+         influx:
+            enabled: false
+         elastic:
+            enabled: false
+         jmx:
+            enabled: false
+         graphite:
+            enabled: false
+         datadog:
+            enabled: false
+         dynatrace:
+            enabled: false
+
+   endpoint:
+      metrics:
+         enabled: true
+      prometheus:
+         enabled: false
+
+   endpoints:
+      web:
+         exposure:
+            include: prometheus,metrics,info,health
+
