Disable persistence of query results and Profile Data based on Configuration

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -63,6 +63,7 @@ vyne:
          searchPathExclusionsCacheSize: 200000
    history:
       persistRemoteCallResponses: false
+      persistResults: false
 
 feign:
    client:
