--- a/schema-server/pom.xml
+++ b/schema-server/pom.xml
@@ -9,7 +9,7 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>file-schema-server</artifactId>
+   <artifactId>schema-server</artifactId>
 
    <dependencies>
       <dependency>
