Clean up irritating errors & warnings
Stop IntelliJ moaning about duplicated dependencies and resolved maven
properties.

--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -98,7 +98,9 @@
                             <build>
                                 <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                                <tags>
+                                  <!--suppress UnresolvedMavenProperty -->
                                   <tag>${docker.tag.latest}</tag>
+                                  <!--suppress UnresolvedMavenProperty -->
                                   <tag>${docker.tag.numbered}</tag>
                                </tags>
                             </build>
