--- a/pom.xml
+++ b/pom.xml
@@ -161,12 +161,6 @@
 
       <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
-         <artifactId>kotlin-test</artifactId>
-         <version>${kotlin.version}</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-test-junit</artifactId>
          <version>${kotlin.version}</version>
          <scope>test</scope>
@@ -512,6 +506,7 @@
          </activation>
          <properties>
             <docker.tag.latest>latest-snapshot</docker.tag.latest>
+            <!--suppress UnresolvedMavenProperty -->
             <docker.tag.numbered>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-BETA-${buildNumber}</docker.tag.numbered>
          </properties>
       </profile>
@@ -531,6 +526,7 @@
          </activation>
          <properties>
             <docker.tag.latest>latest-alpha</docker.tag.latest>
+            <!--suppress UnresolvedMavenProperty -->
             <docker.tag.numbered>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-ALPHA-${buildNumber}</docker.tag.numbered>
          </properties>
       </profile>
