--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -176,17 +176,6 @@
           <artifactId>spring-kafka-test</artifactId>
           <scope>test</scope>
        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
 
         <!-- Monitoring and reporting -->
         <dependency>
@@ -346,7 +335,9 @@
                             <build>
                                 <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                                <tags>
+                                  <!--suppress UnresolvedMavenProperty -->
                                   <tag>${docker.tag.latest}</tag>
+                                  <!--suppress UnresolvedMavenProperty -->
                                   <tag>${docker.tag.numbered}</tag>
                                </tags>
                             </build>
