--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -83,7 +83,9 @@
                             <build>
                                 <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                                <tags>
+                                  <!--suppress UnresolvedMavenProperty -->
                                   <tag>${docker.tag.latest}</tag>
+                                  <!--suppress UnresolvedMavenProperty -->
                                   <tag>${docker.tag.numbered}</tag>
                                </tags>
                             </build>
