initial distributed projections

--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -143,6 +143,10 @@
          <artifactId>mockwebserver</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>com.hazelcast</groupId>
+         <artifactId>hazelcast</artifactId>
+      </dependency>
 
 
    </dependencies>
