--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -18,6 +18,10 @@
          <artifactId>kotlinx-coroutines-core</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-serialization-json</artifactId>
+      </dependency>
+      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
       </dependency>
