--- a/schema-server/pom.xml
+++ b/schema-server/pom.xml
@@ -28,6 +28,11 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>swagger2taxi</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
@@ -70,6 +75,11 @@
          <groupId>com.nhaarman.mockitokotlin2</groupId>
          <artifactId>mockito-kotlin</artifactId>
          <version>2.2.0</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.github.tomakehurst</groupId>
+         <artifactId>wiremock-jre8-standalone</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
