Tuning of hazelcast distributed projections

--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -147,6 +147,11 @@
          <groupId>com.hazelcast</groupId>
          <artifactId>hazelcast</artifactId>
       </dependency>
+      <dependency>
+         <groupId>com.spikhalskiy.futurity</groupId>
+         <artifactId>futurity-core</artifactId>
+         <version>0.3-RC3</version>
+      </dependency>
 
 
    </dependencies>
