--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -76,6 +76,11 @@
          <artifactId>hazelcast</artifactId>
       </dependency>
       <dependency>
+         <groupId>com.hazelcast</groupId>
+         <artifactId>hazelcast-aws</artifactId>
+         <version>2.4</version>
+      </dependency>
+      <dependency>
          <groupId>org.bitsofinfo</groupId>
          <artifactId>hazelcast-docker-swarm-discovery-spi</artifactId>
          <version>1.0-RC14</version>
