refactor only: remove dependenices on spring in Vyne
LENS-622

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -16,6 +16,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-csv-utils</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
          <groupId>org.taxilang</groupId>
          <artifactId>taxi-lang-service</artifactId>
          <version>${taxi.version}</version>
