--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -92,6 +92,11 @@
          <scope>test</scope>
       </dependency>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-spring-http</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
