--- a/cask-api/pom.xml
+++ b/cask-api/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
        <dependency>
+          <groupId>io.vyne</groupId>
+          <artifactId>vyne-csv-utils</artifactId>
+          <version>${project.version}</version>
+       </dependency>
+       <dependency>
           <groupId>com.vladmihalcea</groupId>
           <artifactId>hibernate-types-52</artifactId>
           <version>2.9.13</version>
@@ -30,10 +35,6 @@
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
-       <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-webflux</artifactId>
-       </dependency>
        <dependency>
           <groupId>io.vyne</groupId>
           <artifactId>vyne-core-types</artifactId>
