--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
       <module>utils</module>
       <module>vyne</module>
       <module>vyne-spring</module>
+      <module>vyne-spring-http</module>
       <module>schema-store</module>
       <module>schema-store-client</module>
       <module>schema-store-api</module>
@@ -61,6 +62,7 @@
       <module>test-cli</module>
       <module>jwt-auth-server</module>
       <module>test-containers</module>
+      <module>vyne-csv-utils</module>
    </modules>
 
    <scm>
