--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -119,6 +119,11 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-reactor-netty</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.github.config4k</groupId>
+         <artifactId>config4k</artifactId>
+         <version>0.4.2</version>
+      </dependency>
 
       <dependency>
          <groupId>org.springframework.boot</groupId>
@@ -260,6 +265,11 @@
       <dependency>
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>kotlinx-serialization-cbor</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <scope>test</scope>
       </dependency>
 
    </dependencies>
