build more pipeline runner ui, wire in a pipeline orchestrator facade in the query server

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -114,6 +114,11 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>pipelines-orchestrator-api</artifactId>
+         <version>${project.version}</version>
+      </dependency>
 
       <dependency>
          <groupId>org.springframework.boot</groupId>
