older version of hazelcast for compatiblity with swarm spi

--- a/pom.xml
+++ b/pom.xml
@@ -327,6 +327,13 @@
             <version>0.4.1</version>
          </dependency>
 
+         <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.9.4</version>
+         </dependency>
+
+
       </dependencies>
    </dependencyManagement>
 
