--- a/pom.xml
+++ b/pom.xml
@@ -330,7 +330,7 @@
          <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
-            <version>3.9.4</version>
+            <version>3.10-BETA-1</version>
          </dependency>
 
 
