added eureka to hazelcast config

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -52,7 +52,8 @@ vyne:
    hazelcast:
       enabled: false # Enable or disable starting a hazelcast cluster
       discovery: multicast # One of aws/multicast/swarm
-      memberTag: vyne-query-service # Member tags allow delegation of responsibilities
+      memberTag: cask # Member tags allow delegation of responsibilities
+      eurekaUri: http://127.0.0.1:8761/eureka/
 
 feign:
    client:
