--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -74,6 +74,7 @@ vyne:
       enabled: false # Enable or disable starting a hazelcast cluster
       discovery: multicast # One of aws/multicast/swarm
       memberTag: vyne-query-service # Member tags allow delegation of responsibilities
+      eurekaUri: http://127.0.0.1:8761/eureka/
 
 
 feign:
