Enable streaming in cask

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -83,7 +83,7 @@ cask:
    service:
       annotations: Datasource
    streamQueries:
-      enabled: false
+      enabled: true
 
 # Actuators + prometheus metrics configuration
 
