--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -62,6 +62,10 @@
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
       <dependency>
+         <groupId>net.logstash.logback</groupId>
+         <artifactId>logstash-logback-encoder</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
          <version>${project.version}</version>
@@ -115,6 +119,53 @@
          <version>1.0.2</version>
          <scope>test</scope>
       </dependency>
+
+
+      <!-- Need to overrie kafka client to use spring-kafka-test with client 2.0.1-->
+      <!-- https://docs.spring.io/spring-kafka/docs/2.2.1.BUILD-SNAPSHOT/reference/html/deps-for-21x.html -->
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka-clients</artifactId>
+         <version>${kafka.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka-clients</artifactId>
+         <version>${kafka.version}</version>
+         <classifier>test</classifier>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka_2.11</artifactId>
+         <version>${kafka.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka_2.11</artifactId>
+         <version>${kafka.version}</version>
+         <classifier>test</classifier>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.hazelcast.jet</groupId>
+         <artifactId>hazelcast-jet-kafka</artifactId>
+         <version>${hazelcast-jet.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.kafka</groupId>
+         <artifactId>spring-kafka-test</artifactId>
+         <scope>test</scope>
+         <version>2.2.12.RELEASE</version>
+      </dependency>
+
+
+      <dependency>
+         <groupId>com.hazelcast.jet.contrib</groupId>
+         <artifactId>http</artifactId>
+         <version>0.1</version>
+      </dependency>
+
 
    </dependencies>
 
