--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
       <logstash.logback.version>6.4</logstash.logback.version>
       <swagger.springfox.version>2.9.2</swagger.springfox.version>
       <http4k.version>4.9.8.0</http4k.version>
+
+      <hazelcast-jet.version>4.5</hazelcast-jet.version>
+      <hazelcast.version>4.2</hazelcast.version>
    </properties>
 
    <modules>
@@ -192,6 +195,11 @@
 
    <dependencyManagement>
       <dependencies>
+         <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>${hazelcast.version}</version>
+         </dependency>
          <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-bom</artifactId>
