--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
       <logstash.logback.version>6.4</logstash.logback.version>
       <swagger.springfox.version>3.0.0</swagger.springfox.version>
       <http4k.version>4.9.8.0</http4k.version>
+
+      <hazelcast.version>4.2</hazelcast.version>
    </properties>
 
    <modules>
@@ -191,6 +193,11 @@
 
    <dependencyManagement>
       <dependencies>
+         <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>${hazelcast.version}</version>
+         </dependency>
          <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-bom</artifactId>
