--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -67,12 +67,11 @@ vyne:
       persistResults: false
 
    projection:
-      distributionMode: LOCAL # One of [LOCAL | HAZELCAST] LOCAL = projections are performed on the instance process the query, HAZELCAST = distribute projection work to eligible members
-      distributionPacketSize: 100 # Number of TypedInstances in a distributed workload - only applicable where distributionMode = HAZELCAST
+      distributionMode: LOCAL # One of [LOCAL | DISTRIBUTED] LOCAL = projections are performed on the instance process the query, DISTRIBUTED = distribute projection work to eligible members
+      distributionPacketSize: 100 # Number of TypedInstances in a distributed workload - only applicable where distributionMode = DISTRIBUTED
       distributionRemoteBias: 10 # Number of nodes in the hazelcast cluster before work is preferentially distributed to remote nodes
 
    hazelcast:
-      enabled: false # Enable or disable starting a hazelcast cluster
       discovery: MULTICAST # One of aws/multicast/swarm
       memberTag: vyne-query-service # Member tags allow delegation of responsibilities
       eurekaUri: http://127.0.0.1:8761/eureka/
