add vyne graph viewer / debugger tools

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -102,6 +102,7 @@ hystrix:
 
 logging:
    level:
+
       org.springframework: WARN
       com.netflix.discovery.InstanceInfoReplicator: ERROR
 
@@ -113,6 +114,8 @@ logging:
       com.netflix: WARN
       com.hazelcast: WARN
       io.vyne: INFO
+#       Enable this to get graph debug schemas:
+#      io.vyne.query.GraphSearcher: TRACE
       org.apache.catalina: WARN
 eureka:
    client:
