--- a/schema-server/pom.xml
+++ b/schema-server/pom.xml
@@ -78,6 +78,11 @@
          <scope>test</scope>
       </dependency>
       <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-test</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>com.github.tomakehurst</groupId>
          <artifactId>wiremock-jre8-standalone</artifactId>
          <scope>test</scope>
