--- a/connectors/jdbc-connector/pom.xml
+++ b/connectors/jdbc-connector/pom.xml
@@ -10,9 +10,32 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>jdbc-connector</artifactId>
-
+   <properties>
+      <schemacrawler.version>16.15.7</schemacrawler.version>
+   </properties>
 
    <dependencies>
+      <dependency>
+         <groupId>us.fatehi</groupId>
+         <artifactId>schemacrawler</artifactId>
+         <version>${schemacrawler.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>taxi-writer</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>test-utils</artifactId>
+         <version>${taxi.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>taxi-jvm-common</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
       <dependency>
          <groupId>org.taxilang</groupId>
          <artifactId>compiler</artifactId>
